--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Skip tests
         env:
           IS_SKIP: ${{ !contains(github.event.pull_request.labels.*.name, 'version-bump') }}
-        run:
+        run: |
           if ${IS_SKIP} == true; then
             echo "is_skip=true" >> $GITHUB_ENV
             echo "tests will be skipped"
