--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,14 +36,14 @@ jobs:
           fi
 
       - name: Checkout
-        if: {{success() && env.run_tests}}
+#        if: {{success() && env.run_tests}}
         uses: actions/checkout@v3
 
 #      - name: Unshallow
 #        run: git fetch --prune --unshallow
 
       - uses: actions/setup-python@v4
-        if: {{success() && env.run_tests}}
+#        if: {{success() && env.run_tests}}
         with:
           python-version: ${{ matrix.pyVersion }}
 
