--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,15 +46,15 @@ jobs:
         if: env.run_tests && success()
         with:
           python-version: ${{ matrix.pyVersion }}
-
-      - name: Check run_tests
-        run: echo ${{ env.run_tests }}
-
-      - name: Check success
-        run: echo ${{success()}}
+#
+#      - name: Check run_tests
+#        run: echo ${{ env.run_tests }}
+#
+#      - name: Check success
+#        run: echo ${{success()}}
 
       - name: Run tests
-        if: env.run_tests && success()
+        if: ${{ env.run_tests && success() }}
         run: make dev test
         env:
           AWS_REGION: ${{ vars.AWS_REGION }}
