--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,6 @@ jobs:
         env:
           VERSION_BUMP: ${{ contains(github.event.pull_request.labels.*.name, 'version-bump') }}
         run: |
-          echo "version bump ${VERSION_BUMP}"
           if ${VERSION_BUMP} == true; then
             echo "run_tests=false" >> $GITHUB_ENV
             echo "tests will be skipped"
@@ -49,7 +48,7 @@ jobs:
           python-version: ${{ matrix.pyVersion }}
 
       - name: Run tests
-        if: ${{ env.run_tests && success() }}
+        if: ${{ env.run_tests }}
         run: make dev test
         env:
           AWS_REGION: ${{ vars.AWS_REGION }}
