--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,19 +77,7 @@ jobs:
 
       - name: Bump version
         id: bump_version
-        run: |
-          import os
-          from packaging import version
-          with open("./laktory/_version.py") as fp:
-            v0 = fp.read().split("=")[-1].strip().replace('"', '')
-            v0 = version.parse(v0)
-            v1 = version.Version(f"{v0.major}.{v0.minor}.{v0.micro+1}")
-          with open("./laktory/_version.py", "w") as fp:
-            fp.write(f'VERSION = "{v0}" # test2')
-          with open(os.environ['GITHUB_OUTPUT'], 'a') as fp:
-            print(f"version={str(v1)}", file=fp)
-          print(f"Bumping laktory to {v1}")
-        shell: python
+        run: python ./.github/scripts/bump_version.py
 
       - name: Set up Git
         run: git config --global user.email "okubot@okube.ai" && git config --global user.name "okube-git-bot"
