--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,10 +53,10 @@ jobs:
         run: git config --global user.email "actions@github.com" && git config --global user.name "GitHub Actions"
 
       - name: Create release tag
-        run: git tag release-v${{ steps.get_version.outputs.version }}
+        run: git tag v${{ steps.get_version.outputs.version }}
 
       - name: Push release tag
-        run: git push origin release-v${{ steps.get_version.outputs.version }}
+        run: git push origin v${{ steps.get_version.outputs.version }}
 
 
   bump:
