--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -108,6 +108,9 @@ jobs:
 #          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   doc:
+    permissions:
+      contents: write  # required to push new branch
+#      pull-requests: write  # required to create pull-request
     runs-on: ubuntu-latest
 #    needs: tag
     steps:
