--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -109,7 +109,7 @@ jobs:
 
   doc:
     permissions:
-      contents: write  # required to push new branch
+      contents: write
 #      pull-requests: write  # required to create pull-request
     runs-on: ubuntu-latest
 #    needs: tag
