--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,3 +106,15 @@ jobs:
         run: gh pr merge --auto --squash --delete-branch
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  doc:
+    permissions:
+      contents: write
+    runs-on: ubuntu-latest
+    needs: tag
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Publish doc
+        run: make publishdoc
