--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "jsonref",
     "pulumi",
     "pulumi_databricks",
+    "pulumi_random",
     "pyyaml",
     "pydantic>=2",
     "settus",
