--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,13 +74,34 @@ plugins:
   - mkdocstrings:
       handlers:
         python:
+          import:
+          - https://docs.python.org/3/objects.inv
+          - https://installer.readthedocs.io/en/stable/objects.inv  # demonstration purpose in the docs
+          - https://mkdocstrings.github.io/autorefs/objects.inv
+          paths: [src]
           options:
-            docstring_style: numpy
-            members_order: source
-#            separate_signature: true
             docstring_options:
               ignore_init_summary: true
+            docstring_section_style: table
+            docstring_style: numpy
+            filters: ["!^_"]
+            group_by_category: true
+            heading_level: 2
+            inherited_members: false
+            members_order: source
             merge_init_into_class: true
+            separate_signature: false
+            show_category_heading: true
+            show_if_no_docstring: false
+            show_root_full_path: true
+            show_root_heading: false
+            show_signature_annotations: true
+            show_source: false
+            show_symbol_type_heading: true
+            show_symbol_type_toc: true
+            signature_crossrefs: true
+            summary: true
+
 #  - snippets
 #  - search
 
