--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -87,16 +87,16 @@ plugins:
             filters: ["!^_"]
             group_by_category: true
             heading_level: 2
-            inherited_members: false
-            members_order: source
+            inherited_members: false  # this only apply to methods and properties, not to pydantic fields
+#            members_order: source
             merge_init_into_class: true
             separate_signature: false
             show_category_heading: true
             show_if_no_docstring: false
             show_root_full_path: true
-            show_root_heading: false
+            show_root_heading: true
             show_signature_annotations: true
-            show_source: false
+            show_source: true
             show_symbol_type_heading: true
             show_symbol_type_toc: true
             signature_crossrefs: true
@@ -141,7 +141,8 @@ nav:
       - DataEventHeader: api/dataeventheader.md
       - DataEvent: api/dataevent.md
       - DataProducer: api/dataproducer.md
-      - DataSource:
+      - DataSources:
+        - BaseDataSource: api/datasources/basedatasource.md
         - EventDataSource: api/datasources/eventdatasource.md
         - TableDataSource: api/datasources/tabledatasource.md
       - Databricks:
